src/main/java/com/example/citron/web/errors/sales/SalesQteExceedsHarvestQteException.java
package com.example.citron.web.errors.sales;

public class SalesQteExceedsHarvestQteException extends RuntimeException{
    public SalesQteExceedsHarvestQteException(String message) {
        super(message);
    }
}
